k8s/4-network-with-pod/ingress-lb-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 8080
      - pathType: Prefix
        path: /app1
        backend:
          service:
            name: app1-service
            port:
              number: 8080
